# cuda-design-patterns

./: .clang-format  .drone.script  .drone.yml  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  cuda.bzl  cuda_utils.h  examples.cu  gtest.BUILD
.ci/: check.sh  clang.Dockerfile  cpplint.Dockerfile  cuda.Dockerfile  cuda8.Dockerfile  makefile
cmake/: CudaHelper.cmake
cmake/Modules/: FindGTestddd.cmake
include/: cuda_benchmark.h  cuda_index.h  cuda_utils.h
include/multiply/: multiply.h
include/test/: multiply.h
src/: benchmark-multiply.cu.cc  deprecated_examples.cu  deprecated_examples.cu_old  multiply.cc  sharedmemory.cu  sharedmemory.cu.cc  tune.cu  tune.cu.cc
src/multiply/: multiply.cc  multiply_cpu.cc  multiply_gpu.cu  multiply_gpu.cu.cc
test/: test_multiply.cc  test_multiply.cu  test_multiply.cu.cc  test_multiply_impl.h
